<resources>
    <string name="app_name">ECommerceWhiteLabel</string>

    <!--    Bottom navigation menu names-->
    <string name="bottom_navigation_menu_title_home">Home</string>
    <string name="bottom_navigation_menu_title_search">Search</string>
    <string name="bottom_navigation_menu_title_cart">Cart</string>
    <string name="bottom_navigation_menu_title_profile">Profile</string>

    <!--    alerts , buttons and snacks messages-->
    <string name="ok_message">OK</string>
    <string name="product_added_to_favorites">Added to favorites</string>
    <string name="need_to_login_first">Do login first</string>
    <string name="need_to_login_first_action">Log in</string>
    <string name="error_generic_message">There was an unexpected error!</string>
    <string name="error_mandatory_text_field_empty">Fill all the fields to save!</string>
    <string name="btn_next_text">Next</string>

    <!--    Home-->
    <string name="home_item_list_shipping_cost_placeholder">Free shipping</string>
    <string name="home_label">Hardware store</string>
    <string name="home_products_label">Most viewed</string>
    <string name="home_categories_label">Categories</string>

    <!--    search-->
    <string name="search_label">Search</string>
    <string name="search_button_open_filters_text">Filters</string>
    <string name="search_button_apply_filters_text">Apply</string>
    <string name="search_edit_text_hint">Search</string>
    <string name="search_filters_edit_text_min_value_hint">Min value</string>
    <string name="search_filters_edit_text_max_value_hint">Max value</string>
    <string name="search_filters_label">Filters</string>
    <string name="search_filters_clean_filters_label">Clean filters</string>
    <string name="search_empty_results">No results!</string>

    <!--    Cart-->
    <string name="cart_label">Cart</string>
    <string name="cart_button_purchase_text">Continue purchase</string>
    <string name="cart_button_list_item_amount_placeholder">Quantity: %1$s</string>
    <string name="cart_empty_cart_message">Your cart is empty, let`s go shopping?</string>

    <!--    Product Details-->
    <string name="product_details_button_purchase_text">Buy</string>
    <string name="product_details_quantity_hint">quantity</string>
    <string name="product_details_quantity_default_value">1</string>

    <!--    Payment flow-->
    <string name="payment_select_address_payment_label">Select Address</string>
    <string name="payment_confirmation_label">Payment resume</string>
    <string name="payment_select_payment_method_label">Payment</string>
    <string name="payment_select_payment_method_radio_button_billet">Billet</string>
    <string name="payment_select_payment_method_radio_button_pix">Pix</string>
    <string name="payment_select_payment_method_billet_label">Test Shop Online</string>
    <string name="payment_select_payment_method_pix_label">PIX</string>
    <string name="payment_select_payment_total_value">Total value:</string>
    <string name="payment_select_payment_shipping_cost">Shipping cost:</string>
    <string name="payment_select_payment_shipping_cost_placeholder">Free</string>
    <string name="payment_select_payment_finish_order_btn_text">Finish Order</string>
    <string name="payment_select_payment_billet_method_description">You must pay this billet until the <b>expiration date</b>, after that it will be compensated <b>within</b> 3 days.\n\n\nMore information about the payment will be sent to your registered <b>e-mail</b> address.</string>
    <string name="payment_select_payment_pix_method_description"><b>Pix key: testpixkey@pvsb.com</b>\n\n\nMaking the payment via Pix, your order can be authorized <b>within 1 hour</b>, after that you will receive more information about your order on your account`s registered <b>e-mail</b>.</string>
    <string name="payment_confirmation_deliver_info_label">Delivery</string>
    <string name="payment_confirmation_deliver_info_zip_code_label">Zip code:</string>
    <string name="payment_confirmation_deliver_info_neighbour_label">Neighbour:</string>
    <string name="payment_confirmation_deliver_info_street_label">Street:</string>
    <string name="payment_confirmation_deliver_info_city_label">City:</string>
    <string name="payment_confirmation_deliver_info_number_label">Number:</string>
    <string name="payment_confirmation_products_label">Products</string>
    <string name="payment_confirmation_payment_label">Payment</string>
    <string name="payment_confirmation_payment_method_label">Payment method:</string>
    <string name="payment_confirmation_payment_value_label">Total value:</string>
    <string name="payment_confirmation_payment_description">After <b>confirming</b> this purchase, all information about the payment will be sent to your account`s registered <b>e-mail address</b>.</string>

    <!--    Profile-->
    <string name="profile_sign_up_text_field_email_hint">E-mail</string>
    <string name="profile_sign_up_text_field_name_hint">Name</string>
    <string name="profile_sign_up_text_field_birth_date_hint">Birth date</string>
    <string name="profile_sign_up_text_field_password_hint">Password</string>
    <string name="profile_sign_up_btn_login_text">Login</string>
    <string name="profile_sign_up_btn_create_account_text">Create Account</string>
    <string name="profile_info_button_text">Registration</string>
    <string name="profile_favorites_button_text">Favorites</string>
    <string name="profile_Orders_button_text">Orders</string>
    <string name="profile_addresses_button_text">Addresses</string>
    <string name="profile_change_password_button_text">Change password</string>
    <string name="profile_logout_button_text">Logout</string>
    <string name="profile_user_greetings">Hello %1$s!</string>

    <!--    Registration-->
    <string name="registration_label">Registration</string>


    <!--    Addresses -->
    <string name="addresses_create_address_postal_code_hint">Zip Code</string>
    <string name="addresses_create_address_street_hint">Street</string>
    <string name="addresses_create_address_city_hint">City</string>
    <string name="addresses_create_address_state_hint">State</string>
    <string name="addresses_create_address_neighbour_hint">Neighbour</string>
    <string name="addresses_create_address_complement_hint">Complement</string>
    <string name="addresses_create_address_number_hint">Number</string>
    <string name="addresses_create_address_nick_hint">Address Nick</string>
    <string name="addresses_create_address_save_address_btn_text">Save</string>
    <string name="addresses_create_address_label">Create Address</string>
    <string name="addresses_list_label">Addresses</string>
    <string name="addresses_list_new_address_btn_text">New Address</string>

    <!--    Favorites -->
    <string name="favorites_label">Favorites</string>
    <string name="favorites_empty_message">You have none products added to your favorites yet!</string>

    <!--    Orders -->
    <string name="orders_list_label">Orders</string>
    <string name="orders_order_details_label">Order details</string>
    <string name="orders_list_item_order_label">Order: <b>#%1$s</b></string>
    <string name="orders_list_item_order_value_label">Value: <b>#%1$s</b></string>
    <string name="orders_order_details_info_date">Date</string>
    <string name="orders_order_details_info_products_size">Total of items</string>
    <string name="orders_order_details_info_payment_method">Payment method</string>
    <string name="orders_order_details_info_total_value">Total</string>
    <string name="orders_order_details_items_label">Items</string>
    <string name="orders_order_details_delivery_label">Delivery</string>
    <string name="orders_order_details_delivery_info_shipping">Shipping cost</string>
    <string name="orders_order_details_delivery_info_address">Address</string>
    <string name="orders_order_details_delivery_info_neighbour">Neighbour</string>
    <string name="orders_order_details_delivery_info_city">City</string>
    <string name="orders_order_details_delivery_info_zip_code">Zip code</string>
    <string name="orders_order_details_delivery_address_placeholder" formatted="false">"%1$s, %2$s"</string>
    <string name="orders_empty_for_situation">You have no orders for the <b>%1$s</b> situation!</string>

    <!--    change password-->
    <string name="change_password_label">Change password</string>
    <string name="change_password_current_password_field_hint">Current password</string>
    <string name="change_password_new_password_field_hint">New password</string>
    <string name="change_password_new_password_confirmation_field_hint">New password confirmation</string>
    <string name="change_password_btn_text">Change Password</string>
    <string name="change_password_error_passwords_fields_mandatory">All the fields are mandatory.</string>
    <string name="change_password_error_new_and_confirm_password_do_not_match">New passwords don`t match.</string>
    <string name="change_password_error_generic">Verify your password.</string>
</resources>